src/main/java/com/example/MovieBooking/Error/SeatNotFoundException.java
package com.example.MovieBooking.Error;

public class SeatNotFoundException extends RuntimeException{
    public SeatNotFoundException(String ms)
    {
        super(ms);
    }
}
